src/objects/Timecard__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friday_Date__c</fullName>
        <label>Friday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Friday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Friday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monday_Date__c</fullName>
        <label>Monday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Timecards</relationshipLabel>
        <relationshipName>Timecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday_Date__c</fullName>
        <label>Saturday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Saturday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Saturday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sunday_Date__c</fullName>
        <label>Sunday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sunday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Thursday_Date__c</fullName>
        <label>Thursday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Thursday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Thursday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timecard_Name__c</fullName>
        <formula>&apos;Week of &apos; +  TEXT(Monday_Date__c) + &apos; - &apos; +  TEXT(Sunday_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timecard Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timecard_Number__c</fullName>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Timecard Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <description>Sum of all hour fields</description>
        <formula>Monday_Hours__c  +  Tuesday_Hours__c  +  Wednesday_Hours__c  +  Thursday_Hours__c  +  Friday_Hours__c  +  Saturday_Hours__c  +  Sunday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuesday_Date__c</fullName>
        <label>Tuesday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tuesday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tuesday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wednesday_Date__c</fullName>
        <label>Wednesday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wednesday_Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Wednesday_Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Timecard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task__c</columns>
        <columns>Project__c</columns>
        <columns>Resource__c</columns>
        <columns>Status__c</columns>
        <columns>Hours__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TC-{000000}</displayFormat>
        <label>Timecard Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <recordTypes>
        <fullName>Task_Based_Timecard</fullName>
        <active>true</active>
        <description>This is to enter the time on an individual task basis. This timecard only captures information for one task at a time</description>
        <label>Task Based Timecard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Weekly_Timecard</fullName>
        <active>true</active>
        <description>This is to capture a weekly time sheet for a project. This captures information more from a daily / weekly basis than a task basis.</description>
        <label>Weekly Timecard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>